GNOME Bugzilla – Bug 702036
curlsmtpsink: incorrect assert in gst_curl_smtp_sink_set_payload_headers_unlocked
Last modified: 2013-06-11 19:09:06 UTC
Created attachment 246557 [details] [review] curlsmtpsink: removed an incorrect assert The requirement that the length of data array is zero is not correct. Additional bytes are added in gst_curl_smtp_sink_flush_data_unlocked.
commit 0d6fc0215c8ed247f041b8d753421f1213bd1eaf Author: Patricia Muscalu <patricia@axis.com> Date: Tue Jun 11 19:45:31 2013 +0200 curlsmtpsink: removed an incorrect assert https://bugzilla.gnome.org/show_bug.cgi?id=702036