curlsmtpsink: removed an incorrect assert

https://bugzilla.gnome.org/show_bug.cgi?id=702036